<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Message Preferences -->

    <SwitchPreference
        android:defaultValue="false"
        android:key="switch_data_format"
        android:title="@string/pref_title_format" />

    <EditTextPreference
        android:defaultValue="@string/pref_default_data_key"
        android:dependency="switch_data_format"
        android:key="text_data_key"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_data_key" />

    <!-- DISABLED FOR RELEASE 1.0 -->
    <!--<EditTextPreference-->
        <!--android:defaultValue="@string/pref_default_longitude_key"-->
        <!--android:dependency="switch_data_format"-->
        <!--android:key="text_longitude_key"-->
        <!--android:maxLines="1"-->
        <!--android:selectAllOnFocus="true"-->
        <!--android:singleLine="true"-->
        <!--android:title="@string/pref_title_longitude_key" />-->

    <!--<EditTextPreference-->
        <!--android:defaultValue="@string/pref_default_latitude_key"-->
        <!--android:dependency="switch_data_format"-->
        <!--android:key="text_latitude_key"-->
        <!--android:maxLines="1"-->
        <!--android:selectAllOnFocus="true"-->
        <!--android:singleLine="true"-->
        <!--android:title="@string/pref_title_latitude_key" />-->

</PreferenceScreen>
